examples/test/testpolicy3850.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3850
  namespace: namespace206
spec:
  podSelector:
    matchLabels:
      key35: value44
      key13: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value40
          key34: value35
      podSelector:
        matchLabels:
          key7: value24
          key33: value24
